--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
-    <title>CGFexample</title>    
+    <title>Final CGRA Project</title>    
     <link rel="icon" href="data:,">
 
 <style>
