--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ canvas {
 </head>
 <body>
 
-    <script type="module" src="main.js"></script>
+    <script type="module" src="./project/main.js"></script>
 
 </body>
 </html>
